--- a/app/templates/panier.html
+++ b/app/templates/panier.html
@@ -122,18 +122,20 @@ https://templatemo.com/tm-539-simple-house
 	              </tr>
 	            </thead>
 	            <tbody>
-								{% for menu in menus %}
+								{% for produit in liste %}
 	              <tr>
+									{if}
 	                <td class="p-2">
 	                  <div class="media align-items-center ombre" style="min-width: 350px;">
 	                    <div class="media-body">
-												<img src="/static/img/gallery/menu/{{menu.image}}" alt="{{menu.image}}" style="float: left; margin-right:10px; width:150px; height:100px;" >
-												<a href="#" class="d-block text-dark">{{menu.menu}}</a>
+												<img src="/static/img/gallery/menu/{{produit.image}}" alt="{{produit.image}}" style="float: left; margin-right:10px; width:150px; height:100px;" >
+												<a href="#" class="d-block text-dark">{{produit.titre}}</a>
 												<small>
-													<p>{{menu.description}}</p>
+													<p>{{produit.description}}</p>
 												</small>
-												<table class="table table-bordered m-0">
-													{% for plat in menu.plats() %}
+												{% if produit.id_menu %}
+													<table class="table table-bordered m-0">
+													{% for plat in produit.plats() %}
 													<tr>
 													 <td class="p-2" style="min-width: 300px;">
 														 <img src="/static/img/gallery/{{plat.categorie.safe_name()}}/{{plat.image}}" alt="" style="width:70px; height:70px; float:left; margin-right:10px">
@@ -150,10 +152,13 @@ https://templatemo.com/tm-539-simple-house
 														 Quantité :&nbsp;
 														 <input type="number" class="text-center" value="{{plat.quantite(menu.id)}}" 	style="width: 100px;">
 													 </td>
-													 <td class="text-right font-weight-semibold align-middle p-3" style="width: 70px">{{plat.prix(menu.id)}} DH</td>
+													 <td class="text-right font-weight-semibold align-middle p-3" style="width: 70px">{{menu.prix(plat.id_plat)}} DH</td>
 												 	</tr>
 													{% endfor %}
 												</table>
+												{% else %}
+													Pas de Table ici !
+												{% endif %}
 	                    </div>
 	                  </div>
 	                </td>
